--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,6 +78,11 @@ jobs:
       uses: actions/checkout@v2
       with:      
         submodules: 'recursive'
+    - name: Import codesign certificate
+      uses: apple-actions/import-codesign-certs@v1
+      with: 
+        p12-file-base64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
+        p12-password: ${{ secrets.P12_PASSWORD }}        
     - name: Compile OpenSSL
       run: |
         git clone https://github.com/openssl/openssl openssl_1_1_1
@@ -93,12 +98,18 @@ jobs:
         cd build
         cmake -DOPENSSL_FOUND=1 -DOPENSSL_INCLUDE_DIR=$rootPath/openssl_1_1_1/include -DOPENSSL_CRYPTO_LIBRARY=$rootPath/openssl_1_1_1/libcrypto.a -DCMAKE_OSX_DEPLOYMENT_TARGET:STRING=10.15 -DCMAKE_CXX_FLAGS="-stdlib=libc++" -DCMAKE_BUILD_TYPE=Release ..
         make -j4
-        
-    - name: Find & copy binaries
+    
+    - name: Sign and notarize
       run: |
         mkdir artifacts
         cp build/crypto/fift artifacts/
         cp build/crypto/func artifacts/
+        cd artifacts
+        codesign --timestamp --options=runtime -s "${{ secret.BUILD_TEAM_NAME }}" -v func
+        codesign --timestamp --options=runtime -s "${{ secret.BUILD_TEAM_NAME }}" -v fift
+        
+    - name: Find & copy binaries
+      run: |
         cd artifacts
         tar -zcvf fift-${{ github.event.inputs.versionName }}.tar.gz fift
         tar -zcvf func-${{ github.event.inputs.versionName }}.tar.gz func
